<resources>
    <string name="app_name">Challenge Chapter 7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_login">Login</string>
    <string name="txt_insert_email">Masukkan Email</string>
    <string name="txt_insert_password">Masukkan Password</string>
    <string name="txt_register_acc">Belum punya akun?</string>
    <string name="txt_register">Register</string>
    <string name="txt_et_username">Masukkan Username</string>
    <string name="txt_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="txt_home">Home</string>
    <string name="txt_default_greetings">Welcome, Username!</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_username">Username</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_birth_date">Birth Date</string>
    <string name="txt_address">Address</string>
    <string name="txt_update">Update</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_favorites">Favorites</string>
</resources>