<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.Profile">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_profile"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_image_error"
        app:layout_constraintBottom_toTopOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile" />

    <Button
        android:id="@+id/btn_add_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_username"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_full_name"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_birth_date"
        android:inputType="date"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/txt_address"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_birth_date" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_update"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_logout"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_update" />

</androidx.constraintlayout.widget.ConstraintLayout>